# Aptos-AdSpace

./: DEMO_SETUP.md  package-lock.json  package.json
rust-backend/: Cargo.toml  Dockerfile  README.md  docker-compose.yml  env.example
rust-backend/examples/: frontend_integration.rs
rust-backend/migrations/: 001_initial_schema.sql
rust-backend/scripts/: test_api.sh
rust-backend/src/: blockchain.rs  main.rs
src/app/: globals.css  layout.tsx  page.tsx  providers.tsx
src/app/analytics/: page.tsx
src/app/api/batch-analysis/: route.ts
src/app/api/completion/: route.ts
src/app/bids/: page.tsx
src/components/: AdvertiserDashboard.tsx  AppWrapper.tsx  EchoChat.tsx  EchoExample.tsx  Onboarding.tsx  UserBalance.tsx
src/contracts/: USDCBidding.ts
src/echo/: index.ts
src/hooks/: useAIUsageTracking.ts  useRainbowWallet.ts  useWallet.ts
src/lib/: echo-sdk.ts  rainbowkit.ts
src/services/: adScriptGenerator.ts  bidRecommendations.ts  creatorAnalysis.ts
